--- a/index.html
+++ b/index.html
@@ -3,9 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>CV en ligne Nicolas Lesieur</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Nicolas Lesieur</h1>
+        <h2>Devellopeur Web et Web Mobile</h2>
+        <div>
+            <a href="">Mail</a> 
+            <img src="" alt="Pictogramme email">
+        </div>
+        <div>
+            <a href="">Telephone</a> 
+            <img src="" alt="Pictogramme téléphone">
+        </div>
+        <div>
+            <a href="">Adresse</a> 
+            <img src="" alt="Pictogramme maison">
+        </div>
+        <div>
+            <a href="#">Permis B</a> 
+            <img src="" alt="Pictogramme voiture">
+        </div>
+    </header>
+    <main>
+        <section>
+            <h3 class="title">Profil</h3>
+            <p>blablabla</p>
+            <p>blablablabla</p>
+        </section>
+        <section>
+            <h3 class="title">Formation</h3>
+        </section>
+        <section>
+            <h3 class="title">Stages</h3>
+        </section>
+        <section>
+            <h3 class="title">Expérience Professionelle</h3>
+        </section>
+        <aside>
+            <div>
+                <h3 class="title">Competence</h3>
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="title">Langues</h3>
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="title">Qualités</h3>
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="title">Centre d'interet</h3>
+                <ul>
+                    <li>Web</li>
+                    <li>Sport</li>
+                    <li>Mangas</li>
+                </ul>
+            </div>
+        </aside>
+    </main>
+    <footer>
+        <img src="" alt="logo LinkedIn">
+        <img src="" alt="logo GitHub">
+        <img src="" alt="logo Instagram">
+    </footer>
 </body>
 </html>
