--- a/index.html
+++ b/index.html
@@ -35,39 +35,49 @@
         </section>
         <section>
             <h3 class="title">Formation</h3>
+            <h4>Titre professionnel develloppeur Wen et Web mobile</h4>
+            <p>Centre Européen de formation</p>
+            <h4>CACES R489 A&B</h4>
+            <p>KILOUTOU</p>
+            <h4>BEP VAM</h4>
+            <p>Lycée Pierre Doriole</p>
         </section>
         <section>
             <h3 class="title">Stages</h3>
         </section>
         <section>
             <h3 class="title">Expérience Professionelle</h3>
+            <h4>Chargé de clientèle</h4>
+            <p>ATTILA</p>
+            <h4>Commercial Itinérant</h4>
+            <p>PROLIANS</p>
+            <h4>Commercial Sédentaire</h4>
+            <p>PROLIANS</p>
         </section>
         <aside>
             <div>
                 <h3 class="title">Competence</h3>
                 <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JAVASCRIPT</li>
+                    <li>PHP</li>
                 </ul>
             </div>
             <div>
                 <h3 class="title">Langues</h3>
                 <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
+                    <li>Français</li>
+                    <li>Anglais</li>
                 </ul>
             </div>
             <div>
                 <h3 class="title">Qualités</h3>
                 <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
+                    <li>Optimiste</li>
+                    <li>Esprit d'équipe</li>
+                    <li>Autonomie</li>
+                    <li>Organisation</li>
                 </ul>
             </div>
             <div>
@@ -81,9 +91,9 @@
         </aside>
     </main>
     <footer>
-        <img src="" alt="logo LinkedIn">
-        <img src="" alt="logo GitHub">
-        <img src="" alt="logo Instagram">
+        <a href="https://fr.linkedin.com/?src=go-pa&trk=sem-ga_campid.21228777300_asid.161774284317_crid.698137525090_kw.linkedin_d.c_tid.kwd-148086543_n.g_mt.e_geo.9055095&mcid=7189711573932810240&cid=&gclsrc=aw.ds&gad_source=1&gclid=EAIaIQobChMIsJaMjIy3iwMVg4VoCR0mbQDdEAAYASAAEgI3nvD_BwE" target="_blank"><img src="./assets/img/linkedin.png" alt="logo LinkedIn"></a>
+        <a href="https://github.com/Masty1988" target="_blank"><img src="./assets/img/github.png" alt="logo GitHub"></a>
+        <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13560899667&extra_1=s%7Cc%7C547348932187%7Ce%7Cinstagram%20%27%7C&placement=&creative=547348932187&keyword=instagram%20%27&partner_id=googlesem&extra_2=campaignid%3D13560899667%26adgroupid%3D126262412054%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-1321618851291%26loc_physical_ms%3D9055095%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gad_source=1&gclid=EAIaIQobChMI-Oi1you3iwMVzz0GAB3GkAAsEAAYASAAEgL9WPD_BwE" target="_blank"><img src="./assets/img/instagram.png" alt="logo Instagram"></a>
     </footer>
 </body>
 </html>
